# ark

./: .gitignore  LICENSE.md  Procfile  Procfile_complete  README.md  go.mod  go.sum  mix.exs  stack_definition.go
arkcluster/: .gitignore  ark.db  go.mod  go.sum
arkcluster/cmd/start/: main.go
arkcluster/internal/api/: api.go  response.go  routes.go  types.go
arkcluster/internal/config/: config.go
arkcluster/internal/dao/: stacks.go
arkcluster/internal/models/: app.go  deployment.go  disk.go  model.go  stack.go
arkcluster/internal/usecase/: create_deployment.go  deploy_deployment.go  upsert_stack_definition.go
arkctl/: go.mod  main.go
arkctl/cmd/: root.go
arkd/: .gitignore  Procfile  README.md  arkd_worker_id  client.go  go.mod  go.sum  image_ref.go  task.go
arkd/cmd/monitor/: main.go
arkd/cmd/start/: main.go
arkd/configs/rpxy/: rpxy-gen.toml
arkd/internal/api/: api.go  response.go  routes.go  types.go
arkdns/: Cargo.toml
assets/: tailwind.config.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: stack_definition.md
example/: stack_definition.toml
example/backend/: Gemfile
example/frontend/: Dockerfile  package.json
lib/: ark_web.ex
lib/ark/: application.ex  mailer.ex  repo.ex
lib/ark_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
services/arkd/: .gitignore  Procfile  go.mod  go.sum
services/arkdns/: Cargo.toml  README.md
services/arkdns/src/: admin_handlers.rs  dns_handler.rs  main.rs  models.rs  options.rs
test/: test_helper.exs
test/support/: conn_case.ex  data_case.ex
(+47 files in other folders)
